<resources>
    <string name="app_name">KKU Colostomy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_meaning">ทวารเทียม คือ การผ่าตัดนำส่วนของลำไส้ใหญ่หรือลำไส้เล็กมาเปิดทางหน้าท้อง</string>
    <string name="home_object">เพื่อเป็นทางระบายสิ่งขับถ่ายในระบบทางเดินอาหารออกสู่ภายนอกแทนการขับถ่ายทางทวารหนัก</string>
    <string name="home_who">ผู้ที่มีการอุดตันของระบบทางเดินอาหาร เช่น ผู้ที่เป็นเนื้องอกลำไส้ หรือทวารหนัก มีติ่งเนื้อในลำไส้ มีการอักเสบและติดเชื้อในลำไส้ใหญ่ รวมถึงผู้ที่ได้รับบาดเจ็บ หรือกระทบกระแทกอย่างรุนแรงที่ลำไส้</string>
    <string name="home_where">แพทย์จะผ่าตัดทำทวารเทียมบริเวณหน้าท้องที่มองเห็นได้ชัดและง่ายต่อการทำความสะอาด โดยหลีกเลี่ยงแนวเข็มขัด รอยแผลเป็น หรือบริเวณที่เป็นปุ่มกระดูก</string>
    <string name="title_activity_complication">ComplicationActivity</string>
    <string name="kku_ncolostomy">KKU\nColostomy</string>
    <string name="compli_menu_one">มีรอยแดง ผื่น คัน</string>
    <string name="compli_menu_two">ผิวหนังหลุดลอกโดยไม่มีผื่นคัน</string>
    <string name="compli_menu_three">มีแผลตื้น พบแป้นรั่วซึม</string>
    <string name="compli_menu_four">มีตุ่มแดง หรือตุ่มหนอง</string>
    <string name="compli_menu_five">ปวดท้อง คลื่นไส้ อาเจียน ถ่ายไม่ออกหรือถ่ายเป็นน้ำ</string>
    <string name="compli_menu_six">ไส้เลื่อน</string>
    <string name="compli_menu_seven">มีเลือดออก</string>
    <string name="compli_menu_eight">อาการที่ควรไปพบแพทย์</string>
    <string name="compli_content_one_title">ผิวหนังเป็นรอยแดง มีผื่น คัน</string>
    <string name="compli_content_one_subtitle">จากการแพ้กาวของอุปกรณ์รองรับ หรือลอกแป้นแรงหรือบ่อยเกินไป</string>
    <string name="compli_content_one_care">ควรลอกแป้นออกด้วยความนุ่มนวล ไม่บ่อยเกินไป ไม่เกาบริเวณที่คัน และควรไปปรึกษาแพทย์เพื่อเปลี่ยนวัสดุรองรับอุจจาระ</string>
    <string name="compli_content_two_title">ผิวหนังรอบ ๆ แผลหลุดลอก โดยไม่มีผื่นแดงหรือผื่นคัน</string>
    <string name="compli_content_two_care">เปลี่ยนแผ่นแป้นให้น้อยลง ติดให้ถูกวิธี ไม่รัดเข็มขัดหรือผ้านุ่งแน่นเกินไป</string>
    <string name="compli_content_three_title">ผิวหนังเป็นแผลตื้น ๆ รอบทวารเทียม มีการรั่วของแป้น ร่วมกับการขังของสิ่งขับถ่าย</string>
    <string name="compli_content_three_care">ตรวจสอบถุงรองรับว่ามีการรั่วของแป้นหรือไม่ ถ้ามีให้เปลี่ยนแป้นทันที และควรทำความสะอาดถุงรองรับอุจจาระทุกวัน</string>
    <string name="compli_content_four_title">ผิวหนังเป็นตุ่มอักเสบหรือตุ่มหนอง</string>
    <string name="compli_content_four_subtitle">จากการอักเสบของรูขุมขน ลอกแป้นแรงเกินไป </string>
    <string name="compli_content_four_care">ดึงลอกแถบกาวของแป้นออกจากผิวหนังอย่างเบามือ หรือใช้สำลีชุบน้ำช่วยในการลอกแถบกาว ถ้ารูขุมขนอักเสบดูแลผิวหนังให้สะอาด อาจใช้สบู่ต้านแบคทีเรียช่วยทำความสะอาด</string>
    <string name="compli_content_five_subtitle">ปวดท้องบิด อุจจาระเป็นน้ำ มีกลิ่นเหม็น ท้องอืด ทวารเทียมบวม คลื่นไส้อาเจียน</string>
    <string name="compli_content_five_title">เกิดจากลำไส้อุดตันบางส่วน</string>
    <string name="compli_content_five_care">เคี้ยวอาหารให้ละเอียด ดื่มน้ำมาก ๆ ออกกำลังกาย อาบน้ำอุ่นหรือประคบร้อนที่หน้าท้อง นอนชันเข่า และนวดกล้ามเนื้อหน้าท้อง เพื่อไล่ให้อาหารที่อุดตันลำไส้ระบายออกไปได้</string>
    <string name="compli_content_six_title">ภาวะไส้เลื่อน</string>
    <string name="compli_content_six_subtitle">มีการยื่นออกมาของลำไส้มาอยู่อีกตำแหน่งหนึ่ง กลายเป็นก้อนตุงบริเวณผิวหนังรอบทวารเทียม</string>
    <string name="compli_content_six_care">หากมีอาการไม่มาก ไม่มีปัญหาลำไส้อุดตัน สามารถใช้ผ้าหรือผ้ายืดรัดหน้าท้อง แต่ไม่ควรรัดแน่นเกินไป ซึ่งเป็นการพยุงหน้าท้อง ป้องกันลำไส้เลื่อนออกมา ตัดหรือเว้นช่องไว้เพื่อให้สอดถุงรองรับสิ่งขับถ่ายได้ หลีกเลี่ยงการยกของหนักและการเบ่งถ่าย หากมีอาการปวดท้องมากควรรีบไปพบแพทย์ทันที</string>
    <string name="compli_content_seven_title">การมีเลือดออกจากทวารเทียม</string>
    <string name="compli_content_seven_subtitle_1">สาเหตุจากการได้รับการบาดเจ็บจากหัวสวน การถูกกระแทกจากการเล่นกีฬา หรือการตัดช่องเปิดของถุงรองรับสิ่งขับถ่ายเล็กกว่าขนาดของลำไส้เปิด ทำให้เกิดการเสียดสีบริเวรเยื่อบุลำไส้</string>
    <string name="compli_content_seven_care_1">ให้ใช้สำลีชุบน้ำกดไว้ 5-10 นาที ไม่จำเป็นต้องใช้ยาฆ่าเชื้อหรือน้ำยาล้างแผลใด ๆ ถ้ามีเลือดออกไม่หยุด ควรรีบไปปรึกษาแพทย์ และควรตัดช่องเปิดของถุงรองรับให้มีขนาดพอเหมาะกับลำไส้เปิด</string>
    <string name="compli_content_seven_subtitle_2">สาเหตุจากการอักเสบเรื้อรัง โดยร่างกายมีการตอบสอนองต่อสิ่งแปลกปลอม เช่น ไหมเย็บแผล การได้รับสารพิษ การติดเชื้อโรคบางชนิด การเสียดสีกับขอบถุงรองรับ หรือการใส่เสื้อผ้าหรือเข็มขัดที่แน่นจนเกินไป โดยจะมีลักษณะเป็นตุ่มนูนแดงเล็กๆ ขนาด 0.2-2 มิลลิเมตร พบที่รอยต่อของเยื่อบุลำไส้และผิวหนังรอบลำไส้เปิด เปราะแตกง่าย เมื่อถูกเสียดสีจะมีเลือดออก</string>
    <string name="compli_content_seven_care_2">ควรรีบไปปรึกษาแพทย์เพื่อทำการรักษา</string>
    <string name="compli_content_doctor_1">เช่น สีม่วงคล้ำ สีดำ สีซีดลง และมีกลิ่นเหม็น มีหนอง เกิดจากการเน่าตายของลำไส้</string>
    <string name="compli_content_doctor_2">ลำไส้นูนยื่นออกมานอนราบแล้วลำไส้ไม่กลับคืน</string>
    <string name="compli_content_doctor_3">อาจเกิดจากทวารเทียมถูกดึงรั้งเข้าไปในช่องท้อง โดยจะมีอาการปวดท้องแบบบีบๆ ขณะมีอุจจาระผ่านทางทวารเทียม อุจจาระจะมีลักษณะลำเล็กลีบและมีแก๊สในช่องท้องมาก ควรรับประทานอาหารที่อ่อนมีกากน้อย ดื่มน้ำให้เพียงพอ และไปพบแพทย์เพื่อทำการขยายลำไส้</string>
    <string name="compli_content_doctor_4">อาจเกิดได้จากผู้ป่วยที่มีน้ำหนักเพิ่ม ทำให้มีผนังหน้าท้องหนาขึ้น ลำไส้จึงเกิดการยุบตัวลง</string>
    <string name="compli_content_doctor_5">เกิดจากการอักเสบหรือติดเชื้อของลำไส้ ปวดท้อง หน้าท้องแข็งตึง อุจจาระออกน้อยกว่าปกติหรือไม่ออกเลย ไม่ผายลม อาจมีการอุดตันของลำไส้อย่างสมบูรณ์ ควรงดน้ำและอาหารไว้ก่อน แล้วรีบไปพบแพทย์</string>
    <string name="com"></string>
    <string name="routine">กิจวัตรประจำวัน</string>
    <string name="bathing">การอาบน้ำ</string>
    <string name="bathing_short_describe">
        สามารถทำได้เหมือนก่อนผ่าตัด คือ
        สามารถอาบได้ทั้งแบบตักอาบหรือแบบฝักบัว อาบได้&#8230;
    </string>
    <string name="bathing_describe">
        สามารถทำได้เหมือนก่อนผ่าตัด คือ
        สามารถอาบได้ทั้งแบบตักอาบหรือแบบฝักบัว อาบได้ทั้งขณะใส่หรือถอดถุงออก
        โดยสามารถใช้พลาสเตอร์ติดรอบแป้นเพื่อให้เป็นติดแน่นไม่ให้น้ำเซาะ
        เมื่ออาบน้ำเสร็จแล้วให้ซับน้ำและเอาพลาสเตอร์ออกได้ หรือหากต้องการเลี่ยนแป้น
        สามารถถอดแป้นออกก่อนได้ น้ำไม่สามารถไหลเข้าทวารเทียมได้ เมื่ออาบน้ำเสร็จแล้ว
        ซับผิวรอบทวารเทียมให้แห้งทุกครั้ง และไม่แนะนำให้แช่ในอ่างน้ำ เนื่องจาก อาจมีน้ำเซาะแป้นทวารเทียม
        ทำให้อายุการใช้งานลดลง
    </string>
    <string name="work_out">การออกกำลังกาย</string>
    <string name="work_out_short_describe">
        สามารถทำได้หลังจาก 6-8 สัปดาห์หลังผ่าตัด ช่วยให้ลำไส้เคลื่อนไหวและ&#8230;
    </string>
    <string name="work_out_describe">
        สามารถทำได้หลังจาก 6-8 สัปดาห์หลังผ่าตัด ช่วยให้ลำไส้เคลื่อนไหวและทำงานได้ดีขึ้น
        ควรหลีกเลี่ยงกิจกรรมที่ต้องใช้กล้ามเนื้อหน้าท้องที่มากหรือเสี่ยงต่อการกระแทก เช่น การยกของหนัก ฟุตบอล ชกมวย เป็นต้นวิธีการออกกำลังกายโดยการยืนแกว่งแขน\n\n
        1. ยืนตรง แยกเท้า 2 ข้างให้ระยะห่างเท่ากับหัวไหล่นิ้วมือชิดกันโดยไม่ต้องเกร็ง หันฝ่ามือไปข้างหลัง\n
        2. แกว่งแขนไปข้างหน้าเบา ทำมุม 30 องศา หายใจเข้า แกว่งแขนไปด้านหลังแรงขึ้น ทำมุม 60 องศา หายใจออก นับเป็น 1 ครั้ง ทั้งน้ำหนักลงที่มือให้เหมือนลูกตุ้ม\n
        3. ในช่วงแรกควรทำวันละ 10 นาที แล้วค่อย ๆ เพิ่มเวลาทำให้ได้อย่างน้อย 30 นาทีต่อวัน\n\n
    </string>
    <string name="eating">การรับประทานอาหาร</string>
    <string name="eating_short_describe">
        รับประทานอาหารที่ อ่อนนุ่ม ย่อยง่าย ทานให้ตรงเวลา เพื่อให้การขับถ่ายและลำไส้ทำงาน&#8230;
    </string>
    <string name="eating_describe">
        รับประทานอาหารที่ อ่อนนุ่ม ย่อยง่าย ทานให้ตรงเวลา เพื่อให้การขับถ่ายและลำไส้ทำงานปกติ หลีกเลี่ยง
        อาหารที่มีกากใยสูง ช่วง8 สัปดาห์แรกหลังผ่าตัด เพื่อ ป้องกันเศษอาหารอุดกั้นรูทวารเทียม
        อาหารที่ควรรับประทาน\n
        -อาหารที่ช่วยลดแก๊สในลำไส้  เช่น ข่า ขิง สะระแหน่ โยเกิร์ต \n
        -อาหารที่ลดอาการท้องผูก เช่น ส้ม มะละกอ ผักคะน้า ผักกวางตุ้ง น้ำ\n
        มะเขือเทศ และดื่มน้ำวันละ 6 &#8211; 8 แก้ว\n\n
        อาหารที่ควรหลีกเลี่ยง\n
        1. อาหารที่ทำให้ท้องเสีย เช่น อาหารรสจัด อาหารหมักดอง ผลไม้ดิบ ผักดิบ อาหารที่ใส่เครื่องเทศมาก อาหารไขมันสูง เป็นต้น\n
        2. อาหารที่ทำให้เกิดกลิ่น เช่น กระเทียม ถั่ว ผักกาด หัวหอม กะหล่ำปลี ชะอม ผักกระเฉด สะตอ กระถิน เป็นต้น\n
        3. อาหารที่ทำให้เกิดแก๊ส เช่น ถั่วเปลือกแข็ง เบียร์ น้ำอัดลม แตงกวา กะหล่ำปลี หัวหอม ข้าวโพด หัวผักกาด นมเปรี้ยว เป็นต้น\n
    </string>
    <string name="sex">การมีเพศสัมพันธ์</string>
    <string name="sex_short_describe">
        สามารถมีเพศสัมพันธ์ได้ตามปกติ เมื่อมีสภาพร่างกายแข็งแรงแล้ว 6 &#8211; 8 สัปดาห์หลังผ่าตัด ควรเตรียมตัว&#8230;
    </string>
    <string name="sex_describe">
        สามารถมีเพศสัมพันธ์ได้ตามปกติ เมื่อมีสภาพร่างกายแข็งแรงแล้ว 6 &#8211; 8 สัปดาห์หลังผ่าตัด ควรเตรียมตัว
        โดยระบายสิ่งขับถ่ายออก หรือเปลี่ยนอุปกรณ์รองรับก่อนการมีเพศสัมพันธ์ รวมทั้งการใช้ผ้าพันรอบเอวบิดทับบริเวณทวารใหม่
        เพื่อป้องกันการเสียดสีหรือถุงรองรับสิ่งขับถ่ายหลุด และใช้ท่าที่ไม่กดทับบริเวณทวารเทียม
    </string>
    <string name="taking_care">การดูแลตนเอง</string>
    <string name="see_the_wound_before_change_the_bag">มาดูแผลก่อนเปลี่ยนถุงกันเถอะ</string>
    <string name="take_out_waste">การเทสิ่งขับถ่าย</string>
    <string name="change_platform">การเปลี่ยนถุงรองรับสิ่งขับถ่าย และการเปลี่ยนแป้นขอบแผล</string>
    <string name="evaluation">การประเมินทวารเทียม</string>
    <string name="pink_or_red">ชมพู, แดง</string>
    <string name="dark_red_and_more_red">แดงคล้ำ, แดงมากขึ้น</string>
    <string name="dark_and_black">สีดำคล้ำ, ดำ</string>
    <string name="color_of_colostomy">สีทวารเทียม</string>
    <string name="moisture_of_colostomy">ความชุ่มชึ้น</string>
    <string name="good_moisture">ผิวมันวาว ชุ่มชึ้นดี</string>
    <string name="dry_colostomy">แห้ง ไม่มันวาว</string>
    <string name="temp_of_colostomy">ความอุ่น</string>
    <string name="warm">อุ่น</string>
    <string name="cold_colostomy">เย็น ซีด</string>
    <string name="position_of_colostomy">ความสูงของทวารเทียม</string>
    <string name="normal_position">ความสูงเท่าเดิม</string>
    <string name="popout">ยื่นออกมากขึ้น</string>
    <string name="collapse">ยุบลงจากเดิม</string>
    <string name="bleeding">เลือดออก</string>
    <string name="no_bleeding">ไม่มีเลือดออก</string>
    <string name="bleeding_little">มีเลือดซึม</string>
    <string name="bleeding_tissue">มีเลือดซึม ร่วมกับมีเยื่อบุลำไส้สีขาว, เหลือง แสบรอบทวารเทียม</string>
    <string name="choice76">ใช้ผ้ายืดหน้าท้องที่เจาะเป็นช่องคาดทับแป้น จะช่วยไม่ให้เป็นมากขึ้น และยังกดให้แป้นแนบติดผนังหน้าท้องได้ดีขึ้น หากมีอาการปวดท้องร่วมด้วย ควรรีบไปพบแพทย์</string>
    <string name="advertise">คำแนะนำ</string>
    <string name="close">ปิด</string>
    <string name="click_here_complication_1">กดที่นี่เพื่อดูภาวะแทรกซ้อนที่ 1</string>
    <string name="tc_three_title">ระบายสิ่งขับถ่ายออกจากถุงรองรับ ได้อย่างไร</string>
    <string name="tc_three_c1_title">การระบายสิ่งขับถ่าย</string>
    <string name="tc_three_c1">1. เทสิ่งขับถ่ายเมื่อมีสิ่งขับถ่ายประมาณ 1/3 ถุง\n2. ระบายแก๊สออกจากถุงทันทีเมื่อมีแก๊สหรือถุงโงพอง หากมีแก๊สมากอาจต้องใช้ถุงรงรับสิ่งขับถ่ายที่มีตัวช่วยระบายแก๊ส</string>
    <string name="tc_three_c2_title">วิธีการเทสิ่งขับถ่าย</string>
    <string name="tc_three_c2_1_title">หากใช้ถุงแบบชิ้นเดียวปลายเปิด</string>
    <string name="tc_three_c2_1">ให้นั่งบนโถส้วมหรือเก้าอี้ แยกขาออกปล่อยปลายถุงลงช่องระหว่างขาพร้อมทั้งเปิดปลายถุง เทลงในโถส้วมหรือภาชนะที่เตรียมรองรับไว เมื่อถ่ายเทสิ่งขับถ่ายออกแล้ว ใส่น้ำเข้าทางด้านปลายถุง ล้างสิ่งขับถ่ายให้สะอาด และเช็ดให้สะอาดก่อนปิดถุงอีกครั้ง</string>
    <string name="tc_three_c2_2_title">หากใช้ใช้ถุงระบบ 2 ชิ้น</string>
    <string name="tc_three_c2_2">จะใช้วิธีเดียวกับการใช้ถุงแบบชิ้นเดียวปลายเปิดก็ได้ หรือปลดถุงออกจากแป้นรอง แล้วปล่อยสิ่งขับถ่ายลงในโถส้วม ทำความสะอาดถุงโดยการใช้น้ำล้างจากด้านบนถุงลงไปจนสะอาด และเช็ดให้สะอาดก่อนปิด</string>
</resources>