<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/holo_blue_light"
    android:background="@android:color/transparent"
    tools:context=".EvaluationAdviceDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/pastel_blue_round_background"
            android:orientation="vertical"
            android:padding="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mitr_regular"
                android:gravity="center"
                android:text="@string/advertise"
                android:textSize="30sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/evaluation_dialog_advice_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/mitr_light"
                android:text="@string/choice76"
                android:textSize="22dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/evaluation_dialog_complication_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mitr_light"
                    android:text="@string/click_here_complication_1" />

            </LinearLayout>

            <Button
                android:id="@+id/evaluation_dialog_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/design_default_color_primary"
                android:fontFamily="@font/mitr_regular"
                android:text="@string/close"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>