<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakingCareContentOneActivity">

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="320dp"-->
    <!--android:background="@color/white"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical">
            <ImageButton
                android:id="@+id/tc_three_back_btn"
                android:layout_width="@dimen/back_button_size"
                android:layout_height="@dimen/back_button_size"
                android:layout_margin="20dp"
                android:clickable="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/back_bold_black" />
            <ImageView
                android:id="@+id/tc_content_3_home_btn"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/home_black"/>
        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="always"
        android:scrollbars="none">

        <LinearLayout
            android:layout_marginHorizontal="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/pastel_blue">
                <TextView
                    android:id="@+id/taking_care_three_topic"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:text="@string/tc_three_title"
                    android:textColor="@color/dark"
                    android:textSize="20sp"
                    android:fontFamily="@font/mitr_regular"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tc_three_c1_title"
                        android:background="@drawable/shape_pastel_blue_round"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:fontFamily="@font/baijamjuree_semibold"
                        android:textSize="@dimen/tc_content_two_text_size"
                        android:textColor="@color/darker"/>

                    <ImageButton
                        android:id="@+id/taking_care_three_231_speaker"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginLeft="5dp"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/speaker_red" />

                </LinearLayout>

                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tc_three_c1"
                    android:fontFamily="@font/baijamjuree_regular"
                    android:textSize="@dimen/tc_content_two_text_size"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/darker"/>

                <LinearLayout
                    android:layout_marginTop="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tc_three_c2_title"
                        android:fontFamily="@font/baijamjuree_semibold"
                        android:textSize="@dimen/tc_content_two_text_size"
                        android:background="@drawable/shape_pastel_blue_round"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:textColor="@color/darker"/>

                    <ImageButton
                        android:id="@+id/taking_care_three_232_speaker"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginLeft="5dp"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/speaker_red" />

                </LinearLayout>


                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tc_three_c2_1_title"
                    android:fontFamily="@font/baijamjuree_semibold"
                    android:textSize="@dimen/tc_content_two_text_size"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/darker"/>

                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tc_three_c2_1"
                    android:fontFamily="@font/baijamjuree_regular"
                    android:textSize="@dimen/tc_content_two_text_size"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/darker"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tc_three_c2_2_title"
                    android:fontFamily="@font/baijamjuree_semibold"
                    android:textSize="@dimen/tc_content_two_text_size"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/darker"/>

                <TextView
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tc_three_c2_2"
                    android:fontFamily="@font/baijamjuree_regular"
                    android:textSize="@dimen/tc_content_two_text_size"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/darker"/>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>